FPS Character Almost done

--- a/Mannequin Horror Jam/Assembly-CSharp.csproj
+++ b/Mannequin Horror Jam/Assembly-CSharp.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Scripts\Player\Interactions.cs" />
     <Compile Include="Assets\Game Assets\Characters\Player\Scripts\RotateBodyToCamera.cs" />
     <Compile Include="Assets\Game Assets\Characters\Player\Scripts\StealthCheck.cs" />
+    <Compile Include="Assets\Game Assets\Characters\Player\FPS CHARACTER\CameraStabilizers.cs" />
     <Compile Include="Assets\Scripts\UI\UI_Buttons.cs" />
     <Compile Include="Assets\StarterAssets\Mobile\Scripts\CanvasInputs\UICanvasControllerInput.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
