--- a/Mannequin Horror Jam/Assembly-CSharp.csproj
+++ b/Mannequin Horror Jam/Assembly-CSharp.csproj
@@ -108,6 +108,8 @@
     <Compile Include="Assets\Game Assets\Characters\Player\FPS CHARACTER\CameraStabilizers.cs" />
     <Compile Include="Assets\Game Assets\Characters\Mannequins\Scripts\FieldOfView.cs" />
     <Compile Include="Assets\Scripts\UI\UI_Buttons.cs" />
+    <Compile Include="Assets\Game Assets\Useful Items\Resumer.cs" />
+    <Compile Include="Assets\Game Assets\Characters\Player\FPS CHARACTER\Interaction\UIToggle.cs" />
     <Compile Include="Assets\StarterAssets\Mobile\Scripts\CanvasInputs\UICanvasControllerInput.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
