--- a/Mannequin Horror Jam/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Mannequin Horror Jam/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -179,7 +179,7 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ShapeBuilder.ActiveShapeIndex",
-                "value": "{\"m_Value\":6}"
+                "value": "{\"m_Value\":0}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -194,12 +194,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":7.469594955444336,\"y\":0.2510843276977539,\"z\":6.074657440185547}}"
+                "value": "{\"m_Value\":{\"x\":-0.10829734802246094,\"y\":0.0,\"z\":-0.07678604125976563}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-14.939189910888672,\"y\":-0.5021686553955078,\"z\":-12.149314880371094}}"
+                "value": "{\"m_Value\":{\"x\":0.21659374237060548,\"y\":0.0,\"z\":0.15357208251953126}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
