--- a/Mannequin Horror Jam/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Mannequin Horror Jam/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -179,7 +179,7 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ShapeBuilder.ActiveShapeIndex",
-                "value": "{\"m_Value\":0}"
+                "value": "{\"m_Value\":6}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -194,12 +194,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":-0.10829734802246094,\"y\":0.0,\"z\":-0.07678604125976563}}"
+                "value": "{\"m_Value\":{\"x\":-0.07381248474121094,\"y\":-2.661001205444336,\"z\":-2.0036792755126955}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":0.21659374237060548,\"y\":0.0,\"z\":0.15357208251953126}}"
+                "value": "{\"m_Value\":{\"x\":0.14762496948242188,\"y\":5.322003364562988,\"z\":4.007358551025391}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
