--- a/Mannequin Horror Jam/Assembly-CSharp.csproj
+++ b/Mannequin Horror Jam/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets\Game Assets\Characters\Player\FPS CHARACTER\BasicInventory.cs" />
     <Compile Include="Assets\Brick Project Studio\Apartment Kit\Common\Scripts &amp; Animation\TableFlip\TableFlipR.cs" />
     <Compile Include="Assets\Inventory\Inventory_Manager.cs" />
+    <Compile Include="Assets\Game Assets\UI\Link\LinkScript.cs" />
     <Compile Include="Assets\Game Assets\Characters\Mannequins\Scripts\MaleController.cs" />
     <Compile Include="Assets\Game Assets\Useful Items\DoorScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
